# AvalonEngine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: default.glsl  deferred_lighting.glsl  geometry.glsl  shadowDepth.glsl
src/: CMakeLists.txt  main.cpp
src/Camera/: Camera.h  FPSCamera.cpp  FPSCamera.h
src/Core/: Application.cpp  Application.h  Input.cpp  Input.h  KeyCodes.h  MouseButtonCodes.h  Timestep.h  Window.cpp  Window.h
src/Renderer/: Buffer.cpp  Buffer.h  ForwardRenderer.cpp  ForwardRenderer.h  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  GeometryPass.cpp  GeometryPass.h  Light.h  LightCamera.cpp  LightCamera.h  LightManager.cpp  LightManager.h  LightingPass.cpp  LightingPass.h  RenderCommand.cpp  RenderCommand.h  RenderPass.h  RenderQueue.cpp  RenderQueue.h  RenderStateManager.cpp  RenderStateManager.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  ShadowMap.cpp  ShadowMap.h  ShadowPass.cpp  ShadowPass.h  VertexArray.cpp  VertexArray.h
src/Resource/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h
src/Shader/: Shader.cpp  Shader.h
src/UI/: UIManager.cpp  UIManager.h
